--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/header.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/header.html.twig
@@ -31,5 +31,8 @@
 <script type="text/javascript">
 $(function() {
     $('.banner').unslider();
+    $(window).resize(function() {
+    	$('.banner').unslider();
+  	});
 });
 </script>
