--- a/src/Fundamental/CommonBundle/Resources/public/css/common.css
+++ b/src/Fundamental/CommonBundle/Resources/public/css/common.css
@@ -5,3 +5,26 @@
         -ms-filter: blur(1px);    
             filter: blur(1px);    
 }
+
+.tags-container{
+	margin-left: 30px;	
+	margin-right: 10px;
+}
+
+.tag-panel{
+	min-width: 250px;
+	height: 200px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 30px;
+	text-align: center;
+	
+	-moz-box-shadow:4px 4px 5px #888888;
+	-webkit-box-shadow:4px 4px 5px #888888;
+	box-shadow:4px 4px 5px #888888;
+}
+
+.tag-panel h1{
+	color: white;
+	text-align: center;
+}
