--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
@@ -14,7 +14,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">findeway</a>
+	      <a class="navbar-brand" href="#">{{ navigation['title'] }}</a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="navcolumns">
 		    <ul class="nav navbar-nav navbar-left">
