--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/index.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/index.html.twig
@@ -8,6 +8,10 @@
 <!-- Header -->
 {{ render(controller('FundamentalCommonBundle:CommonView:header')) }}
 <!-- Content -->
+{% stylesheets '@FundamentalCommonBundle/Resources/public/css/index.css' %}
+    <link href="{{ asset_url  }}" rel="stylesheet" />
+{% endstylesheets %}
+
 <div class="container-fluid tags-container">
     <div class="row-fluid">
 		<p class="lead">
@@ -16,24 +20,24 @@
 	</div>
 	<div class="row-fluid">
 		<div class="col-md-5 tag-panel vcenter" style="background-color: #D35400">
-			<p><h1><strong>C++</strong></h1></p>
+			<p><a href="#"><h1><strong>C++</strong></h1></a></p>
 		</div>
 		<div class="col-md-2 tag-panel vcenter" style="background-color: #1FA67A">
-			<p><h1><strong>Java</strong></h1></p>
+			<p><a href="#"><h1><strong>Java</strong></h1></a></p>
 		</div>
 		<div class="col-md-3 tag-panel vcenter" style="background-color: #3498DB">
-			<p><h1><strong>PHP</strong></h1></p>
+			<p><a href="#"><h1><strong>PHP</strong></h1></a></p>
 		</div>
 	</div>
 	<div class="row-fluid">
 		<div class="col-md-2 tag-panel vcenter" style="background-color: #F0DB4F">
-			<p><h1><strong>Backend</strong></h1></p>
+			<p><a href="#"><h1><strong>Backend</strong></h1></a></p>
 		</div>
 		<div class="col-md-4 tag-panel vcenter" style="background-color: #2B9646">
-			<p><h1><strong>Web Development</strong></h1></p>
+			<p><a href="#"><h1><strong>Web Development</strong></h1></a></p>
 		</div>
 		<div class="col-md-4 tag-panel vcenter" style="background-color: #E48632">
-			<p><h1><strong>Client APP</strong></h1></p>
+			<p><a href="#"><h1><strong>Client APP</strong></h1></a></p>
 		</div>
 	</div>
 </div>
