--- a/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
+++ b/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
@@ -14,7 +14,7 @@
 {% javascripts '@ContentArticleBundle/Resources/public/js/prism.js' %}
     <script src="{{ asset_url  }}"></script>
 {% endjavascripts %}
-<div class="text-center">
+<div class="text-center article-content">
    <h2>{{ article.title|raw }}</h2>
 </div>
 <article>{{ article.content|raw }}</article>
