--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
@@ -4,7 +4,7 @@
 	margin-bottom: 0px;
 }
 </style>
-<nav class="navbar navbar-inverse navbar-static-top navbar-bottom-zero" role='nagivation'>
+<div class="navbar navbar-default navbar-fixed-top navbar-bottom-zero">
     <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -47,4 +47,4 @@
 		    </div>
 		</div>
     </div>
-</nav>
+</div>
