--- a/src/Content/ArticleBundle/Resources/views/Article/article.list.html.twig
+++ b/src/Content/ArticleBundle/Resources/views/Article/article.list.html.twig
@@ -1,1 +1,34 @@
-{ Article List - Tag {{tag}}}
+{% extends '::base.html.twig' %}
+{% block body %}
+	{% block stylesheets %}
+	    <link href="{{ asset('css/common.css') }}" rel="stylesheet" />
+	{% endblock %}
+	<!-- Navbar -->
+	{{ render_hinclude(controller('FundamentalCommonBundle:CommonView:nav')) }}
+{% stylesheets '@ContentArticleBundle/Resources/public/css/animation.css'
+               '@ContentArticleBundle/Resources/public/css/article.css'
+%}
+    <link href="{{ asset_url  }}" rel="stylesheet" />
+{% endstylesheets %}
+	<div class="container-fluid page-content">
+	    {% for article in articles %}
+	    <div class="row col-md-offset-2 col-md-7 fade-in fade-in-{{ article.id%7 }}">
+	    	<div class="row">
+	    		<div class="col-md-9">
+		    		<a href="{{ article.url }}" class="article-title"><strong>{{ article.title }}</strong></a><br />
+	    		</div>
+	    		<div class="col-md-3 datetime">
+	    			<small>{{ article.updateDateTime|date("m/d/Y H:i:s") }}</small>
+	    		</div>   
+	        </div>
+	        <div class="row">
+		        <span class="col-md-offset-1">
+		        	<article>{{  article.content|length > 200 ? article.content|slice(0, 200) ~ '...' : article.content }}
+		        		<a href="{{ article.url }}">Check Details</a>
+		        	</article>
+		        </span>
+	        </div>
+	    </div>
+	    {% endfor %}
+	</div>
+{% endblock %}
