--- a/src/Content/ArticleBundle/Resources/public/css/article.css
+++ b/src/Content/ArticleBundle/Resources/public/css/article.css
@@ -29,9 +29,11 @@ textarea.form-control {
 }
 
 .page-content {
-	margin-top: 100px;
+	margin-top: 80px;
 }
 
 .article-content {
+	margin-left:40px;
+	margin-right:40px;
 	margin-top: 80px;
 }
