--- a/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
+++ b/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
@@ -18,9 +18,9 @@
 	   <h2>{{ article.title|raw }}</h2>
 	</div>
     <div class="row">
-    	<div class="col-md-offset-2 col-md-7">
+    	<div class="col-md-offset-1 col-md-8">
     	   {% for tag in article.tags|split(' ') %}
-	    	  <a href="">{{ tag }}</a>
+	    	  <a href="" class="bg-success">{{ tag }}</a>
 	       {% endfor %}
     	</div>
     	<div class="col-md-3">
@@ -28,5 +28,5 @@
             <p class="text-muted">{{ article.updateDateTime|date("Y/m/d H:i:s") }}</p>
     	</div>   
     </div>
-<article class="article-content lead">{{ article.content|raw }}</article>
+    <article class="article-content lead">{{ article.content|raw }}</article>
 {% endblock %}
