--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
@@ -1,5 +1,11 @@
 <!-- Global Navbar -->
-<div class="navbar navbar-default navbar-fixed-top">
+<style>
+.navbar-bottom
+{
+	margin-bottom:0px;
+}
+</style>
+<div class="navbar navbar-inverse navbar-static-top navbar-bottom">
     <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
