--- a/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
+++ b/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
@@ -17,15 +17,15 @@
 	<div class="text-center page-content">
 	   <h2>{{ article.title|raw }}</h2>
 	</div>
-    <div class="row">
-    	<div class="col-md-offset-1 col-md-8">
+    <div class="row article-header">
+    	<div class="col-md-9">
     	   {% for tag in article.tags|split(' ') %}
-	    	  <a href="" class="bg-success">{{ tag }}</a>
+	    	  <a href="#" ><strong class="alert alert-success">{{ tag }}</strong></a>
 	       {% endfor %}
     	</div>
     	<div class="col-md-3">
-    		<p class="text-warning">Updated By: {{ article.author }}</p>
-            <p class="text-muted">{{ article.updateDateTime|date("Y/m/d H:i:s") }}</p>
+    		<strong class="text-success">Updated By: {{ article.author }}</strong>
+            <strong class="text-muted">{{ article.updateDateTime|date("Y/m/d H:i:s") }}</strong>
     	</div>   
     </div>
     <article class="article-content lead">{{ article.content|raw }}</article>
