--- a/src/Content/ArticleBundle/Resources/views/Article/article.list.html.twig
+++ b/src/Content/ArticleBundle/Resources/views/Article/article.list.html.twig
@@ -12,7 +12,7 @@
 {% endstylesheets %}
 	<div class="container-fluid page-content">
 	    {% for article in articles %}
-	    <div class="row col-md-offset-2 col-md-7 fade-in fade-in-{{ article.id%7 }}">
+	    <div class="row col-md-offset-2 col-md-7 fade-in fade-in-{{ loop.index%7 }}">
 	    	<div class="row">
 	    		<div class="col-md-9">
 		    		<a href="{{ article.url }}" class="article-title"><strong>{{ article.title }}</strong></a><br />
