--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
@@ -5,7 +5,7 @@
 	margin-bottom:0px;
 }
 </style>
-<div class="navbar navbar-inverse navbar-fixed-top navbar-bottom">
+<nav class="navbar navbar-inverse navbar-fixed-top navbar-bottom">
     <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -48,4 +48,4 @@
 		    </div>
 		</div>
     </div>
-</div>
+</nav>
