--- a/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
+++ b/src/Content/ArticleBundle/Resources/views/Article/article.display.html.twig
@@ -37,7 +37,7 @@
     	<div class="col-md-3">
     	    <div class="col-md-3">
 		        <a href="{{ path('content_articles_edit', {'articleId': article.articleId}) }}" ><span class="article-control glyphicon glyphicon-pencil"></span></a>
-	            <a href="javascript:void(0)" onclick="deleteArticle();" ><span class="article-control glyphicon glyphicon-remove"></span></a>
+	            <a href="javascript:void(0)" onclick="deleteArticle();" ><span class="article-control glyphicon glyphicon-trash"></span></a>
     		</div>
     		<div class="col-md-9">
 	    		<strong class="text-success">Updated By: {{ article.author }}</strong>
