config image optimization

--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/header.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/header.html.twig
@@ -11,7 +11,7 @@
 <style>
 .jumbotron
 {
-	background: url('{{ asset('bundles/fundamentalcommon/images/header_bg.png', version='1.0') }}') center;
+	background: url('{{ optipng('@FundamentalCommonBundle/Resources/public/images/header_bg.png') }}') center;
 	background-size:cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
