--- a/src/Fundamental/CommonBundle/Resources/public/css/index.css
+++ b/src/Fundamental/CommonBundle/Resources/public/css/index.css
@@ -1,15 +1,9 @@
 @CHARSET "UTF-8";
 
-.tags-container{
-	margin-left: 30px;	
-	margin-right: 10px;
-}
-
 .tag-panel{
-	min-width: 250px;
 	height: 200px;
-	margin-left: 15px;
-	margin-right: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 	margin-bottom: 30px;
 	text-align: center;
 	
@@ -36,8 +30,4 @@
 	text-align: center;
 	text-decoration: blink;
 	cursor: hand;
-}
-
-.header{
-	margin-top:50px;
 }
