--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/index.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/index.html.twig
@@ -14,32 +14,37 @@
     {{ render(controller('FundamentalCommonBundle:CommonView:header')) }}
 </div>
 <!-- Content -->
-<div class="container-fluid tags-container">
-    <div class="row-fluid">
-		<p class="lead">
-			<strong>Hello {{ name }}!</strong>
-		</p>
-	</div>
-	<div class="row-fluid">
-		<div class="col-md-5 tag-panel vcenter" style="background-color: #D35400">
-			<p><a href="{{ url('content_articles_tag', {'tag': 'C++'}) }}"><h1><strong>C++</strong></h1></a></p>
+<div class="container text-center">
+	<div class="row">
+	    <div class="col-md-3" >
+			<div class="tag-panel vcenter" style="background-color: #D35400">
+				<p><a href="{{ url('content_articles_tag', {'tag': 'C++'}) }}"><h1><strong>C++</strong></h1></a></p>
+			</div>
 		</div>
-		<div class="col-md-2 tag-panel vcenter" style="background-color: #1FA67A">
-			<p><a href="{{ url('content_articles_tag', {'tag': 'Java'}) }}"><h1><strong>Java</strong></h1></a></p>
+		<div class="col-md-3" >
+			<div class="tag-panel vcenter" style="background-color: #1FA67A">
+				<p><a href="{{ url('content_articles_tag', {'tag': 'Java'}) }}"><h1><strong>Java</strong></h1></a></p>
+			</div>
 		</div>
-		<div class="col-md-3 tag-panel vcenter" style="background-color: #3498DB">
-			<p><a href="{{ url('content_articles_tag', {'tag': 'PHP'}) }}"><h1><strong>PHP</strong></h1></a></p>
+		<div class="col-md-3" >
+			<div class="tag-panel vcenter" style="background-color: #3498DB">
+				<p><a href="{{ url('content_articles_tag', {'tag': 'PHP'}) }}"><h1><strong>PHP</strong></h1></a></p>
+			</div>
 		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="col-md-2 tag-panel vcenter" style="background-color: #F0DB4F">
-			<p><a href="{{ url('content_articles_tag', {'tag': 'Backend'}) }}"><h1><strong>Backend</strong></h1></a></p>
+		<div class="col-md-3" >
+			<div class="tag-panel vcenter" style="background-color: #F0DB4F">
+				<p><a href="{{ url('content_articles_tag', {'tag': 'Backend'}) }}"><h1><strong>Backend</strong></h1></a></p>
+			</div>
 		</div>
-		<div class="col-md-4 tag-panel vcenter" style="background-color: #2B9646">
-			<p><a href="{{ url('content_articles_tag', {'tag': 'Web'}) }}"><h1><strong>Web Development</strong></h1></a></p>
+		<div class="col-md-3" >
+			<div class="tag-panel vcenter" style="background-color: #2B9646">
+				<p><a href="{{ url('content_articles_tag', {'tag': 'Web'}) }}"><h1><strong>Web Development</strong></h1></a></p>
+			</div>
 		</div>
-		<div class="col-md-4 tag-panel vcenter" style="background-color: #E48632">
-			<p><a href="{{ url('content_articles_tag', {'tag': 'Client'}) }}"><h1><strong>Client APP</strong></h1></a></p>
+		<div class="col-md-3" >
+			<div class="tag-panel vcenter" style="background-color: #E48632">
+				<p><a href="{{ url('content_articles_tag', {'tag': 'Client'}) }}"><h1><strong>Client APP</strong></h1></a></p>
+			</div>
 		</div>
 	</div>
 </div>
