--- a/src/Fundamental/AccountBundle/Resources/views/Security/login.html.twig
+++ b/src/Fundamental/AccountBundle/Resources/views/Security/login.html.twig
@@ -28,7 +28,7 @@
 			</div>
 			<div class="form-group">
 				<input type="submit" id="_submit" name="_submit"
-					value="{{ 'Login'|trans({}, 'FOSUserBundle') }}"
+					value="{{ 'login'|trans({}, 'FOSUserBundle') }}"
 					class="form-control btn btn-warning" />
 			</div>
 
