change ui interface of login and register

--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/nav.html.twig
@@ -47,6 +47,7 @@
 		                {% else %}
 		                    <li><a href="{{ navigation['Account']['logout']['link'] }}">{{ navigation['Account']['logout']['tag'] }}</a></li>
 		                {% endif %}
+		                <li><a href="{{ navigation['Account']['register']['link'] }}">{{ navigation['Account']['register']['tag'] }}</a></li>
 				        </ul>
 				    </li>
 			    </ul>
