--- a/src/Fundamental/CommonBundle/Resources/views/CommonView/index.html.twig
+++ b/src/Fundamental/CommonBundle/Resources/views/CommonView/index.html.twig
@@ -47,5 +47,10 @@
 			</div>
 		</div>
 	</div>
+	<div id="footer">
+		<div class='row'>
+			<p class="text-center">2014 findewayz.com All rights reserved <a href="http://www.miitbeian.gov.cn/">津ICP备14006763号</a></p>
+		</div>
+	</div>
 </div>
 {% endblock %}
